<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_make_payment"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_posts"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services"
        android:title="@string/title_services" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
