<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.apnaniwas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_postFragment"
            app:destination="@id/postFragment" />
    </fragment>


    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.example.apnaniwas.ui.payment.PaymentFragment"
        tools:layout="@layout/fragment_payment" >
    </fragment>

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.apnaniwas.ui.yourpost.YourPostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_your_post" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.example.apnaniwas.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.apnaniwas.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/postFragment"
        android:name="com.example.apnaniwas.ui.home.homepost.HomePostFragment"
        android:label="PostFragment"
        tools:layout="@layout/fragment_post">
        <argument
            android:name="position"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>


</navigation>