<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/relLayForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:src="@drawable/ic_chevron_left"
            android:contentDescription="@string/back_to_login"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:id="@+id/tvForgetPswdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_passoword"
            android:textStyle="bold"
            android:layout_below="@id/imgBack"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"

            />
        <TextView
            android:id="@+id/tvForgetPswdDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetpswdDes"
            android:textStyle="bold"
            android:layout_below="@id/tvForgetPswdTitle"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            />
        <ImageView
            android:id="@+id/imgFotgotPassword"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:src="@drawable/forgot_password"
            android:layout_below="@id/tvForgetPswdDes"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_35sdp"
            tools:ignore="ContentDescription" />


        <EditText
            android:id="@+id/etFogetPswdMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgFotgotPassword"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/login_curve_card"
            android:drawableStart="@drawable/ic_phone_android"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/IndianNumberCode"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:textSize="@dimen/_12sdp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnForgetSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/gradiant_login_btn"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@id/etFogetPswdMob"/>
    </RelativeLayout>
</ScrollView>