<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_profile"
    android:background="@color/Gray100"
    tools:Ignore="Hardcoded String">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:elevation="6dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="Profile"
            app:titleTextColor="@color/colorWhite"
            app:layout_scrollFlags="scroll|enterAlways|snap" />
    </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Gray100"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:background="@drawable/gradient_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="194dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_image"
                                android:layout_width="142dp"
                                android:layout_height="147dp"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="45dp"
                                android:src="@mipmap/ic_launcher_round" />

                            <ImageView
                                android:id="@+id/upload_image"
                                android:layout_width="33dp"
                                android:layout_height="0dp"
                                android:layout_alignStart="@id/profile_image"
                                android:layout_alignTop="@id/profile_image"
                                android:layout_alignEnd="@id/profile_image"
                                android:layout_alignBottom="@id/profile_image"
                                android:layout_marginStart="55dp"
                                android:layout_marginTop="101dp"
                                android:layout_marginEnd="54dp"
                                android:layout_marginBottom="24dp"
                                android:contentDescription="Profile Image"
                                app:srcCompat="@drawable/ic_photo_camera" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tvUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Name"
                            android:textColor="#fff"
                            android:textSize="21sp"
                            android:textStyle="bold"
                           />
                        <TextView
                            android:id="@+id/tvFlatnoBlock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Name"
                            android:textColor="#fff"
                            android:textSize="21sp"
                            />


                    </LinearLayout>


                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/about_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/profile_about"
                            android:textColor="@color/colorBlack"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvabout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/about_clickable"
                            android:textSize="12dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/ask"
                            android:textColor="@color/colorBlack"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/ask_info"
                            android:textSize="12dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/Blue100">

                            <TextView
                                android:layout_width="230dp"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@color/colorWhite"
                                android:text="@string/create_a_new_post"
                                android:textColor="@color/design_default_color_primary"
                                android:gravity="center"
                                android:padding="5dp"
                                android:contextClickable="true">
                            </TextView>

                        </RelativeLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/account_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/account"
                            android:textColor="@color/colorBlack"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/account_info"
                            android:textSize="12dp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:padding="0dp"
                            android:text="@string/go_account"
                            android:textColor="@color/design_default_color_primary_dark"
                            android:textSize="12sp"
                            android:contextClickable="true"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
