<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    v<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:src="@drawable/ic_chevron_left"
            android:contentDescription="@string/back_to_login"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:id="@+id/tvNewPswdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newPswdTitle"
            android:textStyle="bold"
            android:layout_below="@id/imgBack"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/_15sdp"
            />
        <ImageView
            android:id="@+id/imgNewPassword"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:src="@drawable/password_reset"
            android:layout_below="@id/tvNewPswdTitle"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_35sdp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/login_curve_card"
            android:drawableEnd="@drawable/ic_password_eye_off"
            android:hint="New password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@id/imgNewPassword"
            android:layout_marginTop="@dimen/_30sdp"
            tools:ignore="Autofill,HardcodedText" />

        <EditText
            android:id="@+id/et_confmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/login_curve_card"
            android:drawableEnd="@drawable/ic_password_eye_off"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@id/etNewPassword"
            android:layout_marginTop="@dimen/_10sdp"
            tools:ignore="Autofill,HardcodedText" />
        <TextView
            android:id="@+id/tvPswdDisc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="Password length should be 8-12 with combination of alphanumeric and special characters."
            android:layout_below="@id/et_confmNewPassword"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColor="@color/colorRed"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnNewPswdSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradiant_login_btn"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_below="@id/tvPswdDisc"
            android:layout_marginTop="@dimen/_25sdp"
            />

    </RelativeLayout>
</ScrollView>