<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:src="@drawable/ic_chevron_left"
            android:contentDescription="@string/back_to_login"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            />
        <TextView
            android:id="@+id/tvResetPswdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetCodeTitle"
            android:textStyle="bold"
            android:layout_below="@id/imgBack"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/_15sdp"

            />
        <TextView
            android:id="@+id/tvResetPswdDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetCodeDes"
            android:textStyle="bold"
            android:layout_below="@id/tvResetPswdTitle"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            />
        <ImageView
            android:id="@+id/imgNewPassword"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:src="@drawable/pin_code"
            android:layout_below="@id/tvResetPswdDes"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_35sdp"
            tools:ignore="ContentDescription" />


        <EditText
            android:layout_below="@id/imgNewPassword"
            android:id="@+id/etResetCode"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:maxLines="1"
            android:textSize="@dimen/_25sdp"
            android:textAlignment="center"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't recieve OTP ?"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:layout_below="@id/etResetCode"
            android:layout_marginStart="@dimen/_55sdp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_15sdp"
             />

        <TextView
            android:id="@+id/tvOTPResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESEND OTP"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_below="@id/etResetCode"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/btnResetCodeSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:background="@drawable/gradiant_login_btn"
            android:text="Done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@id/tvOTPResend"
            tools:ignore="HardcodedText" />

    </RelativeLayout>
</ScrollView>